--- a/server-source/Dockerfile
+++ b/server-source/Dockerfile
@@ -1,3 +1,9 @@
-FROM server-demo
+FROM playbox:latest
+
+WORKDIR /usr/src/cpp-server/server-source/
+COPY . .
+
 WORKDIR /usr/src/cpp-server/server-source/build
+RUN cmake .
+RUN make 
 CMD ["./server-source"]
