--- a/server-source/Dockerfile
+++ b/server-source/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /usr/src/cpp-server/server-source/
 COPY . .
 
 WORKDIR /usr/src/cpp-server/server-source/build
-RUN cmake .
+RUN cmake ..
 RUN make 
 CMD ["./server-source"]
